--- a/include/after_body.html
+++ b/include/after_body.html
@@ -1,14 +1,2 @@
 <script type="text/javascript" src="libs/fluidbox/jquery.fluidbox.min.js"></script>
-<script>
-$(function () {
-    $('p img')
-      .wrap(
-        function() {
-          return "<a class='fld' href='" + $( this ).attr("src") + "'></a>";
-        }
-      )
-      .parents()
-      .filter('a.fld')
-      .fluidbox();
-});
-</script>
+<script type="text/javascript" src="include/js/enable-fluidbox.js"></script>
