--- a/include/in_header.html
+++ b/include/in_header.html
@@ -1,7 +1,3 @@
 <link href='libs/fluidbox/css/fluidbox.css' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
-<style type="text/css">
-pre code {
-  font-family: 'Source Code Pro', monospace;
-}
-</style>
+<link href='include/css/style.css' rel='stylesheet' type='text/css'>
