--- a/include/before_body.html
+++ b/include/before_body.html
@@ -10,8 +10,8 @@
         <li><a href="https://github.com/yutannihilation/rmarkdown-website-template">Github</a></li>
         <li class="dropdown">
           <a href="authoring" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Pages<span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">          <li><a href="test">test.html</a></li>
-          <li><a href="test2">test2.html</a></li>
+          <ul class="dropdown-menu" role="menu">          <li><a href="test.html">test</a></li>
+          <li><a href="test2.html">test2</a></li>
           </ul>
         </li>
       </ul>
